Fixed nav overlap issue

--- a/default.css
+++ b/default.css
@@ -64,7 +64,8 @@ nav {
     width:100%;
     padding-bottom: 2em;
     padding-top:2em;
-    color:#551A8B ; 
+    color:#551A8B ;
+    z-index: 1;
 }
 
 .nav-behind {
